--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,4 +14,5 @@ install:
   - chmod +x gradlew
 
 build_script:
--info - ./gradlew test Dselenide.headless=true  # запускаем тест, флаг --info позволяет выводить больше информации
+- ./gradlew test Dselenide.headless=true  # запускаем тест, флаг --info позволяет выводить больше информации
+-info 
