--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,4 +14,6 @@ install:
   - chmod +x gradlew
 
 build_script:
-  - ./gradlew test -D selenide.headless=true  # запускаем тест, флаг --info позволяет выводить больше информации
+  - info
+  - Dselenide.headless=true
+#  - ./gradlew test -D selenide.headless=true   запускаем тест, флаг --info позволяет выводить больше информации
