--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,6 +14,6 @@ install:
   - chmod +x gradlew
 
 build_script:
-  - info
   - D selenide.headless=true
-#  - ./gradlew test -D selenide.headless=true   запускаем тест, флаг --info позволяет выводить больше информации
+#  - ./gradlew test -D selenide.headless=true
+  - info
