--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,6 +14,6 @@ install:
   - chmod +x gradlew
 
 build_script:
-  - D selenide.headless=true
-#  - ./gradlew test -D selenide.headless=true
-  - info
+#  - D selenide.headless=true
+  - ./gradlew test -D selenide.headless=true
+#  - info
